# gpio-access-t2g-bodyentry-starterkit

./: .gitignore  Cargo.toml  LICENSE-SVD.md  README.md  build.rs  cyt2b7.svd  env.bat  memory_cm0.x  memory_cm4.x  rust-gdb.bat  rust-toolchain.toml
.cargo/: config.toml
src/: cortex_m0.rs  cortex_m4.rs  lib.rs
traveo_debug/CypressAutoFlashUtility/: BCM4390x-flash-app.cfg  BCM4390x.cfg  BCM4390x_gdb_jtag.cfg  BCM439x.cfg  BCM439x_gdb_jtag.cfg  CYW9WCD1EVAL1.cfg  CYW9WCD1EVAL1_LPC.cfg  Olimex_ARM-USB-OCD.cfg  Olimex_ARM-USB-TINY-H.cfg  Olimex_ARM-USB-TINY.cfg  at91sam4sXX-flash-app.cfg  at91sam4sXX.cfg  at91sam4sXX_gdb_jtag.cfg  bindi.cfg  cmsis-dap.cfg  fm4-flash-app.cfg  fm4.cfg  fm4_gdb_jtag.cfg  jlink.cfg  k61-flash-app.cfg  k61.cfg  k61_gdb_jtag.cfg  lpc17xx-flash-app.cfg  lpc17xx.cfg  lpc17xx_gdb_jtag.cfg  lpc18xx-flash-app.cfg  lpc18xx.cfg  lpc18xx_gdb_jtag.cfg  lpc43xx-flash-app.cfg  lpc43xx.cfg  lpc43xx_gdb_jtag.cfg  psoc62-flash-app.cfg  psoc62.cfg  psoc62_gdb_jtag.cfg  stm32f1x-flash-app.cfg  stm32f1x.cfg  stm32f1x_gdb_jtag.cfg  stm32f2x-flash-app.cfg  stm32f2x.cfg  stm32f2x_gdb_jtag.cfg  (+6 more)
traveo_debug/CypressAutoFlashUtility/flm/cypress/: EULA.txt  NOTICE.txt
traveo_debug/CypressAutoFlashUtility/scripts/board/: cmi2c_arduino-due.cfg  cmi2c_frdm-k64f.cfg  cmi2c_nucleo-f103rb.cfg  cmi2c_nucleo-g071rb.cfg  cmi2c_same70-xplained.cfg  cmqpi_arduino-due.cfg  cmqpi_nucleo-f767zi.cfg  cmspi_examples.cfg  (+9 more)
traveo_debug/CypressAutoFlashUtility/source/: Readme.txt  build_all.sh  clean.sh  just_hidapi.sh  just_libftdi.sh  just_libusb.sh  just_oocd.sh  prerequisites.sh
(+10 files in other folders)
