[package]
name = "traveo_rust_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cyt2b7 = { features = ["rt", "critical-section"] }
cortex-m = { version = "0.7.5", features = ["critical-section-single-core"]}
cortex-m-semihosting = { version = "0.3.1" }
panic-halt = "0.2.0"
cortex-m-rt = "0.7.0"

[[bin]]
name = "main"
test = false
bench = false

# Keep small size of dependencies when debugging
[profile.dev.package."*"]
opt-level = 's'

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level= 's'